hphp/hack/test/typecheck/modules/extend_internal_class.php.exp
File "extend_internal_class.php", line 9, characters 17-17:
You cannot use this type in a public declaration. (Typing[4446])
  File "extend_internal_class.php", line 7, characters 16-16:
  It is declared as `internal` here
