hphp/hack/test/typecheck/modules/extend_internal_class.php
<?hh
<<file:__EnableUnstableFeatures("modules")>>
module cookies;
new module cookies {}


internal class A {}

class B extends A{}
